Fixes z-index so overlay links can be activated

--- a/css/style.scss
+++ b/css/style.scss
@@ -64,7 +64,6 @@ h2 {
     text-align: center;
     background: rgba(0,0,0,0.7);
     padding-top: 15%;
-    z-index: -99;
 
     h1, h2 {
       color: white;
@@ -113,6 +112,7 @@ h2 {
 nav {
 
   position: absolute;
+  z-index: 2;
 
   h1 {
     margin-top: 0.3em;
